Article 1, highlight and vocabulary

--- a/_posts/2019-09-18-article-1/article-1.Rmd
+++ b/_posts/2019-09-18-article-1/article-1.Rmd
@@ -1,12 +1,11 @@
 ---
-title: "Article 1 : Where’s My Elephant? High-Tech Collars Track Wildlife in Real Time"
+title: "Article 1 : Look out, invasive species: The robots are coming"
 author:
-  - name: Nicolas Devilez
-date: 09-18-2019
+  - name: Giovanni Polverino, Mert Karakaya, Chiara Spinello, Vrishin R. Soman, Maurizio Porfiri
+date: September 16, 2019
 categories:
-  - elephant
-  - track
-preview: image/where-s-my-elephant.jpg
+  -invasive specie
+preview: (image/800px-Gambusia_affinis_male.jpg)
 output:
   distill::distill_article:
     self_contained: false
@@ -16,15 +15,46 @@ output:
 knitr::opts_chunk$set(echo = FALSE)
 ```
 
+**Invasive species control is notoriously challenging, especially in lakes and rivers where native fish and other wildlife have limited options for escape. In his laboratory's latest <Mark>foray</Mark> into using biomimetic robots to understand and modify animal behavior, NYU Tandon School of Engineering Professor Maurizio Porfiri led an interdisciplinary team of researchers from NYU Tandon and the University of Western Australia toward demonstrating how robotic fish can be a valuable tool in the fight against one of the world's most problematic invasive species, the mosquitofish.**
 
-![ [Credit: Alex Dissanayake Getty Images](https://www.gettyimages.be/detail/foto/dusk-falling-as-elephants-grazing-kenya-stockfotos/187255538) ](image/where-s-my-elephant.jpg)
+Found in freshwater lakes and rivers worldwide, <Mark>soaring</Mark> mosquitofish populations have decimated native fish and amphibian populations, and attempts to control the species through toxicants or trapping often fail or cause <Mark>harm</Mark> to local wildlife.
+
+Porfiri and a team of collaborators have published the first experiments to gauge the ability of a biologically inspired robotic fish to induce fear-related changes in mosquitofish. Their findings indicate that even brief exposure to a robotic replica of the mosquitofish's primary predator -- the largemouth bass -- can provoke meaningful stress responses in mosquitofish, triggering avoidance behaviors and physiological changes associated with the loss of energy reserves, potentially translating into lower rates of reproduction.
+
+The paper, "Behavioural and Life-History Responses of Mosquitofish to Biologically Inspired and Interactive Robotic Predators," appears in the current issue of the Journal of the Royal Society Interface.
+
+"To the best of our knowledge, this is the first study using robots to evoke fear responses in this invasive species," Porfiri said. "The results show that a robotic fish that closely replicates the swimming patterns and visual appearance of the largemouth bass has a powerful, lasting impact on mosquitofish in the lab setting."
+
+The team exposed groups of mosquitofish to a robotic largemouth bass for one 15-minute session per week for six consecutive weeks. The robot's behavior varied between <Mark>trials</Mark>, <Mark>spanning</Mark> several degrees of <Mark>biomimicry</Mark>. Notably, in some trials, the robot was programmed to incorporate real-time feedback based on interactions with live mosquitofish and to exhibit "attacks" typical of predatory <Mark>behavior</Mark> -- a rapid increase in swimming speed. Interactions between the live fish and the replica were tracked in real time and analyzed to reveal correlations between the degree of biomimicry in the robot and the level of stress response exhibited by the live fish. Fear-related behaviors in mosquitofish include freezing (not swimming), hesitancy in exploring open spaces that are unfamiliar and potentially dangerous, and <Mark>erratic</Mark> swimming <Mark>patterns</Mark>.
+
+The researchers also measured physiologic parameters of stress response, anesthetizing the fish weekly to measure their weight and length. Decreases in weight indicate a stronger anti-predator response and result in lower energy reserves. Fish with lower reserves are less likely to survive long and devote energy toward future reproduction -- factors with strong implications for population management in the wild.
+
+Fish exposed to robotic predators that most closely mimicked the aggressive, attack-oriented swimming patterns of real-life predators <Mark>displayed</Mark> the highest levels of behavioral and physiological stress responses.
+
+"Further studies are needed to determine if these effects translate to wild populations, but this is a concrete demonstration of the potential of a robotics to solve the mosquitofish problem," said Giovanni Polverino, Forrest Fellow in the Department of Biological Sciences at the University of Western Australia and the lead author of the paper. "We have a lot more work going on between our schools to establish new, effective tools to combat the <Mark>spread</Mark> of invasive species."
+
+Porfiri's Dynamical Systems Laboratory is known for previous work using biomimetic robots <Mark>alongside</Mark> live fish to <Mark>tease out</Mark> the mechanisms of many collective animal behaviors, including leadership, mating preferences, and even the impact of alcohol on social behaviors. In addition to developing robots that offer fully controllable stimuli for studying animal behavior, the biomimetic robots minimize use of experimental animals.
+
+
+![ Mosquito fish. [Credit: Togabi Wikipedia Commons](https://commons.wikimedia.org/wiki/File:Gambusia_affinis_male.jpg) ](image/800px-Gambusia_affinis_male.jpg)
 
 ## Vocabulary 
 
 | Words from the text | Synonym/explanation in English |
 | ------------------- | ------------------------------ |
-| E.g. To cope with   | To deal with                   |
-|                     | Not too distant future         |
+| Foray                    | A venture outside one's customary activity        |
+| Harm  | Injurie or damage                   |
+| Soaring                   | To fly upward        |
+|Trials                     |The act of testing         |
+| Spanning                    | The full extent        |
+| Mimicry                    | The close resemblance of one organism to a different organism        |
+| Behavior                    | Manner of acting        |
+| Erratic                    | Changeable in behavior        |
+| Patterns                    | A reconizable combination of actions        |
+| Displayed                    | Make visible        |
+| Spread                    | To extend out        |
+| Alongside                    | At the side of something        |
+| Tease out                    | To extract        |
 
 ## Analysis table 
 
@@ -38,7 +68,7 @@ knitr::opts_chunk$set(echo = FALSE)
 | Remaining questions?         | (check if there are still interrogations at the end of the article) |
 
 
-<https://www.scientificamerican.com/article/wheres-my-elephant-high-tech-collars-track-wildlife-in-real-time1/?redirect=1>
+<https://www.sciencedaily.com/releases/2019/09/190916114016.htm>
 
 
 
