Affinage des catégories

--- a/english-activity.Rmd
+++ b/english-activity.Rmd
@@ -2,8 +2,20 @@
 title: "My english activity log"
 ---
 
-English was usefull for me because in winter (2018-2019), I went to Danemark, in Copenhagen. Of course I don't speak danish, so English was for me the only way to speak with people. People there are very good English's speaker, that was very surprising.
+* Films :
+
+* TV series :
+
+* Books : 
+
+I have started a book about palaeontology : "Fossils The key to the past" written by Richard Fortey. It's an intresting introduction to paleaontology. I bought it at the Museum of natural sciences of Brussel, I took it because I wanted to learn more about palaeontology and improve my English level (and also because I think it doesn't exist in French).
+
+* Newspapers:
+
+* Podcasts :
+
+* Others :
+
+English was usefull for me because in winter (2018-2019), I went to Danemark, in Copenhagen. Of course I don't speak Danish, so English was for me the only way to communicate with people. People there are very good English's speaker, that was very surprising.
 
 Last summer I went to Romania, and then I had the same issue of do not speaking the local language. So I spoke with everyone in English but there, less people are able to speak English so I didn't talk so much compared with Copenhagen.
-
-I've started a book about palaeontology : "Fossils The key to the past" written by Richard Fortey. It's an intresting introduction to paleaontology. I bought it at the Museum of natural sciences of Brussel, I took it because I wanted to learn more about palaeontology and improve my English level. 
