--- a/_posts/2019-11-12-my-english-activity-log/my-english-activity-log.Rmd
+++ b/_posts/2019-11-12-my-english-activity-log/my-english-activity-log.Rmd
@@ -1,6 +1,19 @@
 ---
 title: "My english activity log"
+description: |
+  A short description of the post.
+author:
+  - name: Rodrigue Tesse
+    url: {}
+date: 11-12-2019
+output:
+  distill::distill_article:
+    self_contained: false
 ---
+
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = FALSE)
+```
 
 * Films :
 
