--- a/_posts/2019-11-12-article-2/article-2.Rmd
+++ b/_posts/2019-11-12-article-2/article-2.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Article 2  : Invasive carp fueled by mussel poop spread across Lake Michigan"
+title: "Article 2 : Invasive carp fueled by mussel poop spread across Lake Michigan"
 description: |
   Analysis of an article that explaining how much the introducing of Asian carps could destroy the local ecosystem.
 author:
@@ -67,7 +67,7 @@ knitr::opts_chunk$set(echo = FALSE)
 | Researchers                  | Carolyn Wilke, she is a writer at Science News for Students and she has a Ph.D. in environmental engineering from Northwestern University (A University located near Chicago). |
 | Published in?                | August 13, 2019, in Science News. |
 | General topic?               | The ability for two invasives species of carps ( Bighead carp (Hypophthalmichthys nobilis) and Silver carp (Hypophthalmichthy molitrix)) to settle news ecosystems. |
-| Procedure/what was examined? |  |
-| Conclusions/discovery?       | News studies show the fact that scientists underestimated the ability for these two species to change their diets. Before it was thought that they could only eat some algae, but in reality they can hold a lot of differents types of 'food' like poop, and decomposing animals. Considering this facts scientists calculated their habitable area and in reality the bighead carps have a habitable area four times bigger than thought previously. It represents 43,308 square kilometers (≃ three quarters of the lake). And for the silver carp the area doubled and it represents 2,758 square kilometers. |
-| Remaining questions?         | A lot of questions are remaining, simulate the evolution of a invasive population is very complex, even a little factor, can completly change estimations. Can we found a general simulation for every invasive specie? Will the invasives carps follow the last simulation or not? |
+| Procedure/what was examined? | News studies show the fact that scientists underestimated the ability for these two species to change their diets. Before it was thought that they could only eat some algae, but in reality they can hold a lot of differents types of 'food' like poop, and decomposing animals. |
+| Conclusions/discovery?       | Considering this facts scientists calculated the habitable area for these species and in reality the bighead carps have a habitable area four times bigger than thought previously. It represents 43,308 square kilometers (≃ three quarters of the lake). And for the silver carp the area doubled and it represents 2,758 square kilometers. |
+| Remaining questions?         | A lot of questions are remainin because simulating the evolution of a invasive population is very complex, even a little factor can completly change all the results. But for me the most interesting questions are this : Can we found a general simulation for every invasive specie? Will the invasives carps follow the last simulation or not? |
 
