--- a/_posts/2019-11-18-article-3/article-3.Rmd
+++ b/_posts/2019-11-18-article-3/article-3.Rmd
@@ -8,6 +8,8 @@ author:
 date: 11-18-2019
 categories:
   - Invasive species
+  - Grasses
+  - Wild fires
 preview: image/1024px-Fire_in_Ranua.JPG
 output:
   distill::distill_article:
@@ -26,8 +28,8 @@ knitr::opts_chunk$set(echo = FALSE)
 
 * Source of the article : <https://www.sciencedaily.com/releases/2019/11/191104155649.htm>
 
-![ Fire picture. [Credit: Zouavman Le Zouave](https://fr.wikipedia.org/wiki/Feu#/media/Fichier:Fire_in_Ranua.JPG
-) ](image/1024px-Fire_in_Ranua.JPG)
+![Fire picture. [Credit: Zouavman Le Zouave](https://fr.wikipedia.org/wiki/Feu#/media/Fichier:Fire_in_Ranua.JPG
+)](image/1024px-Fire_in_Ranua.JPG)
 
 ## II. Vocabulary
 
