--- a/_posts/2019-11-18-article-3/article-3.Rmd
+++ b/_posts/2019-11-18-article-3/article-3.Rmd
@@ -10,7 +10,7 @@ categories:
   - Invasive species
   - Grasses
   - Wild fires
-preview: image/1024px-Fire_in_Ranua.JPG
+preview: 2011-08-04_20_00_00_Susie_Fire_in_the_Adobe_Range_west_of_Elko_Nevada.jpg
 output:
   distill::distill_article:
     self_contained: false
@@ -28,8 +28,9 @@ knitr::opts_chunk$set(echo = FALSE)
 
 * Source of the article : <https://www.sciencedaily.com/releases/2019/11/191104155649.htm>
 
-![Fire picture. [Credit: Zouavman Le Zouave](https://fr.wikipedia.org/wiki/Feu#/media/Fichier:Fire_in_Ranua.JPG
-)](image/1024px-Fire_in_Ranua.JPG)
+![Wild fire in Nevada. [Credit: Famartin, a wikipedia user ](https://commons.wikimedia.org/wiki/File:2011-08-04_20_00_00_Susie_Fire_in_the_Adobe_Range_west_of_Elko_Nevada.jpg) ](image/2011-08-04_20_00_00_Susie_Fire_in_the_Adobe_Range_west_of_Elko_Nevada.jpg)
+
+
 
 ## II. Vocabulary
 
