--- a/_posts/2020-02-16-article-6/article-6.Rmd
+++ b/_posts/2020-02-16-article-6/article-6.Rmd
@@ -1,12 +1,12 @@
 ---
 title: "article 6"
 description: |
-  A short description of the post.
+  This article is talking about the causes of the effiency of the crayfish colonization.
 author:
   - name: Rodrigue Tesse
     url: {}
 date: 02-16-2020
-preview: unnamed.jpeg
+preview: unnamed.jpg
 categories:
   - Invasive specie
   - Fish
